[package]
name = "iparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
memchr = "2.5.0"

[dependencies.nom]
version = "7.1.1"
features = [ "alloc" ]

[dependencies.nom_locate]
version = "4.0.0"